@@ -133,9 +133,9 @@
 # Report system uptime instead of daemon uptime
 system_uptime=yes
 
-# Notify interval in seconds. default is 30 seconds.
-#notify_interval=240
-notify_interval=60
+# Notify interval in seconds. default is 900 seconds.
+# As advised in the standard, announcement have a lifetime double of this value.
+notify_interval=900
 
 # Unused rules cleaning.
 # never remove any rule before this threshold for the number
